# simplelogging

./: .codeclimate.yml  .coveralls.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  deliver.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
docs/: Makefile  conf.py  history.md  index.rst  installation.rst  make.bat  readme.md  usage.md  usage.rst
easylogging/: __init__.py
example/: example_module.py  main.py
example/quick_start/: main.py
example/with_modules/: main.py
simplelogging/: __init__.py
tests/: test_easylogging.py  test_simplelogging.py
