[tool.poetry]
name = "simplelogging"
version = "0.11.0"
description = "Logging made simple, no excuse for any debug print call."
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vpoulailleau/simplelogging"
homepage = "https://github.com/vpoulailleau/simplelogging"
documentation = "https://simplelogging.readthedocs.io/en/latest/"
keywords = ["logging", "simplelogging"]
license = "BSD-3-Clause"
include = ["simplelogging/**/*.py"]

[tool.poetry.dependencies]
python = "^3.6"
colorlog = ">=4.1,<6.0"

[tool.poetry.dev-dependencies]
python-dev-tools = {version = ">=2020.9.4", python = ">=3.7,<4.0"}

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36, py37, py38

[testenv]
whitelist_externals =
    poetry
    echo
    sed
    cp
changedir = {toxinidir}/tests
commands =
    poetry install -v
    poetry run pytest -s -vv --cov=simplelogging
    poetry run coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's#//home#/home#g' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's#/home.*vpoulailleau/simplelogging/##g' coverage.xml
    cp coverage.xml ../coverage.xml
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
